@@ -20,17 +20,12 @@ public class ReachabilityTesterFactory extends it.polito.dp2.NFFG.lab2.Reachabil
 	public ReachabilityTester newReachabilityTester() throws ReachabilityTesterException {
 		it.polito.dp2.NFFG.NffgVerifierFactory factory = it.polito.dp2.NFFG.NffgVerifierFactory.newInstance();
 		try {
-			URL url = new URL(System.getProperty("it.polito.dp2.NFFG.lab2.URL"));
-			return new ReachabilityTesterImpl(factory.newNffgVerifier(), url.toURI());
+			URI uri = new URI(System.getProperty("it.polito.dp2.NFFG.lab2.URL"));
+			return new ReachabilityTesterImpl(factory.newNffgVerifier(), uri);
 		} catch (URISyntaxException e) {
-			// TODO: Auto-generated catch block
 			throw new ReachabilityTesterException("Invalid URI: " + e.getMessage());
-		} catch (MalformedURLException e) {
-			// TODO Auto-generated catch block
-			throw new ReachabilityTesterException("Invalid URL: " + e.getMessage());
 		} catch (NffgVerifierException e) {
-			// TODO Auto-generated catch block
-			throw new ReachabilityTesterException("Impossible to generate data" + e.getMessage());
+			throw new ReachabilityTesterException("Impossible to generate data: " + e.getMessage());
 		}
 	}
 
